--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,9 @@
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^9.11",
         "laravel/sanctum": "^2.14.1",
-        "laravel/tinker": "^2.7"
+        "laravel/tinker": "^2.7",
+        "spatie/browsershot": "^3.56",
+        "wnx/sidecar-browsershot": "^1.1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
