--- a/.env.example
+++ b/.env.example
@@ -19,7 +19,7 @@ BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 FILESYSTEM_DISK=local
 QUEUE_CONNECTION=sync
-SESSION_DRIVER=file
+SESSION_DRIVER=array
 SESSION_LIFETIME=120
 
 MEMCACHED_HOST=127.0.0.1
@@ -51,4 +51,10 @@ PUSHER_APP_CLUSTER=mt1
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
-SESSION_DRIVER=array
+SIDECAR_ACCESS_KEY_ID=
+SIDECAR_SECRET_ACCESS_KEY=
+SIDECAR_REGION=
+SIDECAR_ARTIFACT_BUCKET_NAME=
+SIDECAR_EXECUTION_ROLE=
+
+IDECAR_ENV=YOUR_NAME_local
