Support submitting encrypted API keys for multiple S3 buckets

--- a/.env.example
+++ b/.env.example
@@ -60,3 +60,5 @@ SIDECAR_BROWSERSHOT_MEMORY=
 SIDECAR_BROWSERSHOT_WARMING_INSTANCES=3
 
 IDECAR_ENV=YOUR_NAME_local
+
+AWS_INBOUND_API_DECRYPTION_KEY=password
