--- a/serverless.yml
+++ b/serverless.yml
@@ -1,13 +1,30 @@
-service: laravel
+service: document-generation-servivce
 
 provider:
     name: aws
     # The AWS region in which to deploy (us-east-1 is the default)
-    region: us-east-1
+    region: eu-west-2
     # The stage of the application, e.g. dev, production, staging… ('dev' is the default)
     stage: dev
     runtime: provided.al2
     lambdaHashingVersion: 20201221
+    environment:
+      APP_NAME: "Document Gen Testing"
+      APP_ENV: local
+      APP_KEY: base64:Yx84gi7O3UgxPo9bCBPeNukGfMr+m/JDS/sug5KVEso=
+      APP_DEBUG: true
+      APP_URL: https://hz540jzw7g.execute-api.eu-west-2.amazonaws.com
+      S3_ACCESS_KEY_ID: AKIASNXF6JU7355B3HNO
+      S3_SECRET_ACCESS_KEY: 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
+      S3_DEFAULT_REGION: eu-west-2
+      S3_BUCKET: document-generation-testing
+      S3_USE_PATH_STYLE_ENDPOINT: false
+      SIDECAR_ACCESS_KEY_ID: AKIASNXF6JU72XANGPJM
+      SIDECAR_SECRET_ACCESS_KEY: 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
+      SIDECAR_REGION: eu-west-2
+      SIDECAR_ARTIFACT_BUCKET_NAME: sidecar-document-gen-testing
+      SIDECAR_EXECUTION_ROLE: arn:aws:iam::166912216383:role/sidecar-execution-role
+      IDECAR_ENV: YOUR_NAME_local
 
 package:
     # Directories to exclude from deployment
@@ -24,7 +41,7 @@ functions:
         handler: public/index.php
         timeout: 28 # in seconds (API Gateway has a timeout of 29 seconds)
         layers:
-            - ${bref:layer.php-80-fpm}
+            - ${bref:layer.php-81-fpm}
         events:
             - httpApi: '*'
     # This function lets us run artisan commands in Lambda
@@ -32,7 +49,7 @@ functions:
         handler: artisan
         timeout: 120 # in seconds
         layers:
-            - ${bref:layer.php-80} # PHP
+            - ${bref:layer.php-81} # PHP
             - ${bref:layer.console} # The "console" layer
 
 plugins:
