--- a/serverless.yml
+++ b/serverless.yml
@@ -12,7 +12,7 @@ provider:
       APP_ENV: local
       APP_KEY: base64:Yx84gi7O3UgxPo9bCBPeNukGfMr+m/JDS/sug5KVEso=
       APP_DEBUG: true
-      APP_URL: https://kae1vuocx6.execute-api.eu-west-2.amazonaws.com
+      APP_URL: https://2liwkryk96.execute-api.eu-west-2.amazonaws.com
       IDECAR_ENV: YOUR_NAME_local
       DB_HOST: ${ssm:/doc-gen-service/db-host}
       DB_PORT: ${ssm:/doc-gen-service/db-port}
@@ -21,8 +21,8 @@ provider:
       DB_PASSWORD: ${ssm:/doc-gen-service/db-password}
       SIDECAR_ACCESS_KEY_ID: ${ssm:/doc-gen-service/full-access-key}
       SIDECAR_SECRET_ACCESS_KEY: ${ssm:/doc-gen-service/full-access-secret}
-      AWS_ACCESS_KEY_ID: ${ssm:/doc-gen-service/s3-access-key}
-      AWS_SECRET_ACCESS_KEY: ${ssm:/doc-gen-service/s3-access-secret}
+#      AWS_ACCESS_KEY_ID: ${ssm:/doc-gen-service/s3-access-key}
+#      AWS_SECRET_ACCESS_KEY: ${ssm:/doc-gen-service/s3-access-secret}
 
 package:
     # Directories to exclude from deployment
