--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,7 @@ npm-debug.log
 yarn-error.log
 /.idea
 /.vscode
+.serverless/cloudformation-template-update-stack.json
+.serverless/document-generation-servivce.zip
+.serverless/serverless-state.json
+/.serverless/
